<resources>
    <string name="app_name">myAstronomy</string>
    <string name="map">Планетарии</string>
    <string name="news">Новости</string>
    <string name="books">Учебники</string>
    <string name="tests">Тесты</string>
    <string name="acc">Профиль</string>
    <string name="prompt_email">example@mail.com</string>
    <string name="prompt_password">Введите свой пароль</string>
    <string name="action_sign_in">Войти</string>
    <string name="label_password">Пароль</string>
    <string name="label_email">Логин</string>
    <string name="join_cosmos">Присоединяйтесь к изучению космоса!</string>
    <string name="title_activity_login">Login</string>
    <string name="register_label">Нет аккаунта? <u>Регистрация</u></string>
    <string name="registration_header">Регистрация</string>
    <string name="or">или</string>
    <string name="password_again">Повторите пароль</string>
    <string name="enter_password_again">Введите пароль еще раз</string>
    <string name="register_btn_label">Зарегистрироваться</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="letsgo">Начать</string>
    <string name="dive_in_astronomy">Погрузитесь в мир астрономии!</string>
    <string name="greeting_desc">Обучайтесь астрономии в удобном мобильном формате.</string>
    <string name="forward">дальше</string>
    <string name="back">назад</string>
    <string name="calendar">Календарь</string>
    <string name="thisday">В этот день:</string>
    <string name="again">Пройти тест заново</string>
    <string name="to_main">На главную</string>
    <string name="add_test">Добавить тест</string>
    <string name="create">Создать</string>
    <string name="const_test">Конструктор тестов</string>
</resources>