<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:visibility="visible"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="28dp"
        android:layout_marginRight="28dp"
        android:layout_marginBottom="28dp"
        android:fontFamily="@font/delagothicone"
        android:hyphenationFrequency="none"
        android:text="@string/registration_header"
        android:textColor="@color/black"
        android:textSize="31sp" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/gregister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="28dp"
        android:layout_marginRight="28dp"
         />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <View
            android:id="@+id/MyDivider"
            android:layout_width="30dp"
            android:layout_height="2dp"
            android:layout_gravity="clip_horizontal|center_vertical"
            android:layout_marginLeft="28dp"
            android:layout_weight="1"
            android:background="@color/blue"
            android:backgroundTint="@color/blue"
            android:foregroundGravity="center_vertical|right"
            android:visibility="visible" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/delagothicone"
            android:foregroundGravity="center_vertical|center"
            android:gravity="center"
            android:text="@string/or"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <View
            android:id="@+id/myDivider"
            android:layout_width="30dp"
            android:layout_height="2dp"
            android:layout_gravity="clip_horizontal|center_vertical"
            android:layout_marginRight="28dp"
            android:layout_weight="1"
            android:background="@color/blue"
            android:backgroundTint="@color/blue"
            android:foregroundGravity="center_vertical|right"
            android:visibility="visible" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="28dp"
        android:fontFamily="@font/sourcesanspro_semibold"
        android:text="@string/label_email"
        android:textAllCaps="false"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/reg_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="28dp"
        android:background="@drawable/edittext_border"
        android:fontFamily="@font/sourcesanspro_regular"
        android:foregroundGravity="center_vertical|center_horizontal"
        android:gravity="center_vertical"
        android:hint="@string/prompt_email"
        android:imeActionLabel="@string/label_email"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Small" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="28dp"
        android:fontFamily="@font/sourcesanspro_semibold"
        android:text="@string/label_password"
        android:textAllCaps="false"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/reg_pas_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="28dp"
        android:background="@drawable/edittext_border"
        android:fontFamily="@font/sourcesanspro_regular"
        android:foregroundGravity="center_vertical|center_horizontal"
        android:gravity="center_vertical"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/label_password"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/grey" />
    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="28dp"
        android:fontFamily="@font/sourcesanspro_semibold"
        android:text="@string/password_again"
        android:textAllCaps="false"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/reg_pas_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="28dp"
        android:background="@drawable/edittext_border"
        android:fontFamily="@font/sourcesanspro_regular"
        android:foregroundGravity="center_vertical|center_horizontal"
        android:gravity="center_vertical"
        android:hint="@string/enter_password_again"
        android:imeActionLabel="@string/label_password"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/grey" />

    <LinearLayout
        android:id="@+id/llBottomContainer2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:gravity="bottom"
        android:orientation="vertical"
        android:padding="5dp">

        <Button
            android:id="@+id/register_account"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="28dp"
            android:layout_marginRight="28dp"
            android:layout_marginBottom="15dp"
            android:enabled="true"
            android:fontFamily="@font/delagothicone"
            android:text="@string/register_btn_label"
            android:textAllCaps="false"
            android:textSize="17sp"
            android:letterSpacing="0.05"
            app:cornerRadius="15dp" />
    </LinearLayout>

</LinearLayout>