<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".GreetingsFragment">

    <!-- TODO: Update blank fragment layout -->

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/frame_drawable" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/frame_drawable"
        android:layout_gravity="clip_horizontal|center|center_vertical"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_starman" />


        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="28dp"
            android:fontFamily="@font/delagothicone"
            android:hyphenationFrequency="none"
            android:text="@string/dive_in_astronomy"
            android:textColor="@color/black"
            android:textSize="31sp"/>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="28dp"
            android:fontFamily="@font/sourcesanspro_regular"
            android:text="@string/greeting_desc"
            android:textAllCaps="false"
            android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llBottomContainer2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:gravity="bottom"
        android:orientation="vertical"
        android:padding="5dp">


        <Button
            android:id="@+id/letsgo_btn"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="28dp"
            android:layout_marginRight="28dp"
            android:layout_marginBottom="15dp"
            android:enabled="true"
            android:fontFamily="@font/delagothicone"
            android:text="@string/letsgo"
            android:textAllCaps="false"
            android:textSize="10pt"
            app:cornerRadius="15dp" />
    </LinearLayout>
</FrameLayout>